# RythmGameVideoEditor

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
libs/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
src/: Application.cpp  Application.h  ContextMenu.h  EventManager.h  Frame.h  PopupMenu.h  VideoData.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h  VideoRenderer.cpp  VideoRenderer.h  main.cpp  util.cpp  util.h
src/core/: AssetsList.cpp  AssetsList.h  Timeline.cpp  Timeline.h
src/segment/: AssetsList.cpp  AssetsList.h  Segment.cpp  Segment.h  SegmentHSplit.cpp  SegmentHSplit.h  SegmentIncludes.h  SegmentVSplit.cpp  SegmentVSplit.h  TimeLine.h  Timeline.cpp  VideoPlayer.cpp  VideoPlayer.h
src/window/: AssetsList.cpp  AssetsList.h  AssetsListWindow.cpp  AssetsListWindow.h  ContextMenu.h  TimeLine.h  TimeLineWindow.h  Timeline.cpp  TimelineController.cpp  TimelineController.h  TimelineRenderer.cpp  TimelineRenderer.h  TimelineSelectionManager.h  TimelineView.h  TimelineWindow.cpp  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerWindow.cpp  VideoPlayerWindow.h  Window.cpp  Window.h  WindowHSplit.cpp  WindowHSplit.h  WindowIncludes.h  WindowVSplit.cpp  WindowVSplit.h
